--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,12 @@ table input {
   background-color: blanchedalmond;
   pointer-events: none;
 }
-.main {
+.game {
   display: flex;
   justify-content: space-evenly;
   margin-top: 50px;
+  position: relative;
+  z-index: 0;
 }
 .sidebar {
   display: flex;
@@ -27,4 +29,75 @@ table input {
   font-size: 20px;
   border-radius: 10px;
   background-color: blanchedalmond;
+}
+.done {
+  text-decoration: line-through;
+}
+.overlay {
+  z-index: 1;
+  position: absolute;
+}
+.picker {
+  background-color: azure;
+  border: 3px rgb(102, 102, 162) solid;
+  width: 60%;
+  height: 80%;
+  margin-left: 20%;
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.mainContainer {
+  position: relative;
+}
+.blur {
+  pointer-events: none;
+}
+.show {
+  visibility: visible;
+}
+.hidden {
+  visibility: hidden;
+}
+.card {
+  height: 90%;
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.togglePoint {
+  cursor: pointer;
+}
+.giftIcon {
+  font-size: 80px;
+  color: darkred;
+  position: relative;
+}
+.cardContainer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 60%;
+}
+.achievementCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+.achievementIcon {
+  font-size: 70px;
+  color: black;
+  margin-bottom: 5%;
+}
+.doneBtn {
+  background-color: greenyellow;
+  padding: 10px;
+  border: 1px solid black;
 }
