--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,6 @@ table input {
 .game {
   display: flex;
   justify-content: space-evenly;
-  margin-top: 50px;
   position: relative;
   z-index: 0;
 }
@@ -43,7 +42,7 @@ table input {
   width: 60%;
   height: 80%;
   margin-left: 20%;
-  margin-top: 5%;
+  padding-top: 5%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -51,6 +50,11 @@ table input {
 }
 .mainContainer {
   position: relative;
+  height: calc(100vh - 16px - 50px);
+  padding-top: 50px;
+}
+body {
+  overflow: hidden;
 }
 .blur {
   pointer-events: none;
@@ -100,4 +104,27 @@ table input {
   background-color: greenyellow;
   padding: 10px;
   border: 1px solid black;
+}
+.toolbar {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 100%;
+  height: 30%;
+}
+.toolbarBtn {
+  font-size: 50px;
+  margin: 50px;
+  display: flex;
+  align-items: center;
+  border: 2px black solid;
+  border-radius: 20px;
+  padding: 20px;
+  cursor: pointer;
+}
+.toolbarName {
+  font-size: 30px;
+  padding-left: 20px;
 }
