--- a/src/App.css
+++ b/src/App.css
@@ -221,3 +221,31 @@ body {
 .sidebar li {
   padding-bottom: 3%;
 }
+.optionWrapper {
+  color: white;
+  width: 60%;
+  margin-left: 20%;
+  z-index: 2;
+  position: absolute;
+  margin-top: 10%;
+  height: 60%;
+  display: flex;
+  justify-content: space-between;
+}
+.option {
+  background-color: #7d6b57;
+  border: 5px solid #666b5e;
+  border-radius: 2%;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.appWrapper {
+  position: relative;
+}
+.option:hover {
+  background-color: #d9d0b4;
+  color: #666b5e;
+}
