added link for redirecting (gsite)

--- a/src/App.css
+++ b/src/App.css
@@ -241,6 +241,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: white;
+  text-decoration: none;
 }
 .appWrapper {
   position: relative;
