--- a/src/App.css
+++ b/src/App.css
@@ -172,7 +172,7 @@ body {
   display: grid;
   row-gap: 5%;
   column-gap: 5%;
-  grid-template-rows: repeat(4, 40%);
+  grid-template-rows: repeat(5, 40%);
   height: inherit;
   width: inherit;
   overflow: scroll;
@@ -306,4 +306,7 @@ a {
   padding-left: 5%;
   padding-right: 5%;
   font-size: large;
+}
+.headerText {
+  padding: 2%;
 }
